scripting hack prevented, text wrap for longer entries implemented, new tweets instantly loaded onto the page

--- a/public/styles/tweet-log.css
+++ b/public/styles/tweet-log.css
@@ -21,7 +21,9 @@
   padding: 30px 10px;
   background-color: white;
   margin: 0;
-  font-size: 18px
+  font-size: 18px;
+  word-wrap: break-word;
+
 }
 
 .tweet-head {
